--- a/home.css
+++ b/home.css
@@ -1,130 +1,51 @@
-*{
-    height: auto;
-    width: auto;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-}
-
-
+/* General Styles */
 #body {
-    margin: auto;
-    padding: 0;
-    background-color: black;
-  }
-
-#backimage{
-    /* background-color: aqua; */
-    display: flex;
-    justify-content: space-between;
-    background-image: url(images/backimage.jpg);
-    width: 100%;
-    height: 500px; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-
+  font-family: Arial, sans-serif;
+  background-color: #000000;
 }
 
-
-#logo{
-color: red;
-margin-left: 90px;
-margin-top: 70px;
-
+/* Header Styles */
+#backimage {
+  background-color: #343a40; /* Dark background for header */
+  color: white;
+  padding: 20px 0;
 }
 
-#logo h1{
-  font-size: 70px;
+#logo h1 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
 }
 
-#home{
-   display: flex;
-   justify-content: space-around;
-    /* background-color: blue;  */
-    height: 100px;
-    width: 200px;
-    margin-right: 90px;
-    margin-top: 80px;
-}
-#home a{
-    color: rgb(255, 255, 255);
-    font-size:24px;
+#home a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
 }
 
-
- #search-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30px;
-    padding: 70px 20px;
-    border-radius: 100px;
-    position:relative ;
-     
-  }
-
-#search-bar input{
-    border:solid white;
-    font-weight: 500;
-    transition: 0.8s;
-    background: transparent;
-    padding-right: 45px;
-    color: white;
-  }
-
-#search{
-    width: 20%;
-    padding: 10px 10px;
-    border-radius: 99px;
-    border: white 3px solid ;
-    background: none;
-    text-align: center;
-    font-size: larger;
-    margin-left: 38%;
-  
-  }
-
-#search::placeholder{
-    color: white;
-    outline: none;
-    font-weight: 500;
-    transition: 0.25s border;
+#home a:hover {
+  color: #ffc107; /* Yellow color on hover */
 }
 
-#search_btn{
-    position: absolute;
-    right: 16px;
-    /* top: 50%; */
-    transform: translateY(-50%);
-    background: white;
-    display: flex;
-    border: white solid;
-    border-radius: 99%;
-    cursor: pointer;
-  }
-  
-#movies{
- 
-     color: white;
-    font-size: larger;
+/* Search Bar Styles */
+#search_bar {
+  margin: 20px 0;
 }
 
+#search {
+  max-width: 500px;
+}
+#film{
+  cursor: pointer;
+}
 
+#films{
+  cursor: pointer;
+}
 
-
-
-
-
-
-
-
-
-
-#footer{
-    display: flex;
-    justify-content: center;
-    /* background-color: aqua; */
-    padding-top: 70px;
-    padding-bottom: 20px;
-    color: white;
-    font-size: bold;
+/* Footer Styles */
+#footer {
+  background-color: #000000;
+  color: white;
+  padding: 10px 0;
+  margin-top: 20px;
 }
