--- a/add.css
+++ b/add.css
@@ -1,3 +1,14 @@
+html, body{
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  main{
+    flex: 1;
+  }
+
 *{
     height: auto;
     width: auto;
@@ -112,10 +123,6 @@ body {
     
     }
 
-    #image{
-    
-        
-    }
     
     /* Basic styling for the upload container */
 .upload-container {
