--- a/home.css
+++ b/home.css
@@ -1,7 +1,18 @@
+html, body{
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 /* General Styles */
 #body {
   font-family: Arial, sans-serif;
   background-color: #000000;
+}
+
+main{
+  flex: 1;
 }
 
 /* Header Styles */
